--- a/games/gameZone.css
+++ b/games/gameZone.css
@@ -1,13 +1,22 @@
-.footer {
-    background-color: lime;
-}
 body {
-    background-color:green;
-    font-family: 'Times New Roman', Times, serif;
+    background-image: url('background.jpeg');
 }
-.mD {
-    background-color: rgb(123, 70, 0);
+.Title {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:white;
+    -webkit-text-stroke: 0%;
+    -webkit-text-stroke-color: black;
 }
+.outline {
+    display: inline-block;
+    padding: 2px 5px;
+    background: #ffffff;
+    color: black;
+    text-decoration: none;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
 .btn {
     display: inline-block;
     padding: 10px 20px;
